--- a/views/index.html
+++ b/views/index.html
@@ -118,7 +118,7 @@
 
 <body>
   <div class="root">
-      <img class="pure-img" src="https://i.imgur.com/I9xBxse.jpg" style="border-radius: 100%; width: 15vw;margin-bottom: 20px;">
+      <img class="pure-img" src="https://i.imgur.com/I9xBxse.jpg" style="border-radius: 100%; width: 15vw;margin-bottom: 20px;box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.29);">
       <h1 class="title">Discord Song Share</h1>
       <form class="pure-form" action="/" method="GET">
         <fieldset class="pure-group">
@@ -131,5 +131,4 @@
       </form>
   </div>
 </body>
-
 </html>
