Update home page gradient

--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
     @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700&display=swap');
 
     body {
-      background: linear-gradient(34deg, #BDC1F3, #3F83F4);
+      background: linear-gradient(34deg, #000046, #1CB5E0);
       background-size: 400% 400%;
       font-family: 'Montserrat', sans-serif;
       -webkit-animation: loginGradient 8s ease infinite;
