Add shadow and border radius on album art

--- a/views/success.html
+++ b/views/success.html
@@ -70,6 +70,8 @@
 
       #song-container > img {
         filter: brightness(0.5);
+        box-shadow: 6px 8px 7px 4px #0000003b;
+        border-radius: 15px;
       }
 
       .inputs {
@@ -146,12 +148,12 @@
         />
         <h1 class="title">Song shared successfully!</h1>
         <button
-        onclick="window.history.back()"
-        type="button"
-        class="inputs pure-button"
-      >
-        Go back
-      </button>
+          onclick="window.history.back()"
+          type="button"
+          class="inputs pure-button"
+        >
+          Go back
+        </button>
       </div>
       <div id="song-container"></div>
     </div>
