Attempt to fix double send bug

--- a/views/success.html
+++ b/views/success.html
@@ -161,7 +161,7 @@
 
   <script>
     const main = async () => {
-      let response = await fetch(document.location);
+      let response = await fetch(document.location + '&headers=true');
       if (response.ok) {
         let song = {
           title: response.headers.get("Song-Title"),
