--- a/views/error.html
+++ b/views/error.html
@@ -116,7 +116,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="icon" type="image/png" href="https://i.imgur.com/I9xBxse.jpg" />
-    <title>[SUCCESS] Discord Song Share</title>
+    <title>[ERROR] Discord Song Share</title>
   </head>
 
   <body>
