--- a/views/index.html
+++ b/views/index.html
@@ -112,13 +112,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="icon" type="image/png" href="https://i.imgur.com/I9xBxse.jpg" />
+  <link rel="manifest" href="/manifest.json">
+  <link rel="icon" type="image/png" href="/icon.png" />
   <title>Discord Song Share</title>
 </head>
 
 <body>
   <div class="root">
-      <img class="pure-img" src="https://i.imgur.com/I9xBxse.jpg" style="border-radius: 100%; width: 15vw;margin-bottom: 20px;box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.29);">
+      <img class="pure-img" src="/icon.png" style="border-radius: 100%; width: 15vw;margin-bottom: 20px;">
       <h1 class="title">Discord Song Share</h1>
       <form class="pure-form" action="/" method="GET">
         <fieldset class="pure-group">
@@ -131,4 +132,15 @@
       </form>
   </div>
 </body>
+
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/service-worker.js')
+      .then(function(reg){
+        console.log("Service worker registered.");
+     }).catch(function(err) {
+        console.log("Service worker not registered. This happened:", err)
+    });
+ }
+</script>
 </html>
