--- a/views/success.html
+++ b/views/success.html
@@ -134,7 +134,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="icon" type="image/png" href="https://i.imgur.com/I9xBxse.jpg" />
+    <link rel="icon" type="image/png" href="/icon.png" />
     <title>[SUCCESS] Discord Song Share</title>
   </head>
 
