Fixes back button not working in PWA

--- a/views/error.html
+++ b/views/error.html
@@ -128,7 +128,7 @@
       />
       <h1 class="title">There was an issue sharing the song...</h1>
 
-      <button onclick="window.history.back()" type="button" class="pure-button">
+      <button onclick="window.location = '/'" type="button" class="pure-button">
         Go back
       </button>
     </div>
