--- a/views/success.html
+++ b/views/success.html
@@ -148,7 +148,7 @@
         />
         <h1 class="title">Song shared successfully!</h1>
         <button
-          onclick="window.history.back()"
+          onclick="window.location = '/'"
           type="button"
           class="inputs pure-button"
         >
